feat: update execution status after completing Wave 4 advanced implementation streams
- Updated comprehensive JNI and Panama implementations
- Enhanced WASI integration with security and performance optimizations
- Completed advanced WebAssembly operations across all modules